--- a/package.json
+++ b/package.json
@@ -16,7 +16,6 @@
     "nuxt": "^2.15.8",
     "vue": "^2.7.10",
     "vue-server-renderer": "^2.7.10",
-    "vue-template-compiler": "^2.7.10",
-    "vuetify": "^3.1.13"
+    "vue-template-compiler": "^2.7.10"
   }
 }
